--- a/lab2/resume.html
+++ b/lab2/resume.html
@@ -62,6 +62,9 @@
             <li>Python, SQL, JavaScript, HTML</li>
         </ul>
     </section>
+    <section>
+        <img src="C:\Users\Podder\Downloads\ewfewf.png" alt="Texas A&M Logo">
+    </section>
 
 </body>
 </html>
